standardize headers and fix alignment

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -195,6 +195,11 @@ hr {
 h5.modal-title {
     font-size: 120%;
 }
+
+h1.page-header {
+    font-size: 24px
+}
+
 button.no-style {
     background: none;
     border: none;
